fix button alignment in admin area

--- a/src/app/admin/admin.less
+++ b/src/app/admin/admin.less
@@ -38,6 +38,10 @@
       cursor: pointer;
     }
   }
+
+  button {
+    margin-bottom: 26px;
+  }
 }
 
 .ace_editor {
